[package]
name = "to-do-list"
version = "1.0.0"
authors = ["metaschool"]
edition = "2018"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry cosmwasm/optimizer:0.16.0"""

[dependencies]
cosmwasm-std = "2.0.1"
cosmwasm-storage = "1.5.2"
cosmwasm-schema = "2.0.1"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
thiserror = "1.0.50"

[dev-dependencies]
cw-multi-test = "2.0.0"
